syntax = "proto2";

package sf.solana.block_meta.v1;

message PbAddFeeLayout {
  required uint64 amount = 1;
}

message Arg {
  required string instruction_type = 1;
  optional PbAddFeeLayout addFee = 2;
}

message InputAccounts {
  optional string mint = 1;
  optional string reflection = 2;
  optional string vault = 3;
  optional string authority = 4;
  optional string systemProgram = 5;
  optional string tokenProgram = 6;
  optional string rent = 7;
  optional string stake = 8;
  optional string reward = 9;
  optional string user = 10;
}

message Meta {
  required string block_date = 1;
  required int64 block_time = 2;
  required string tx_id = 3;
  required string dapp = 4;
  required uint64 block_slot = 5;
  required uint32 instruction_index = 7;
  required bool is_inner_instruction = 8;
  required uint32 inner_instruction_index = 9;
  required string instruction_type = 10;
  required Arg args = 11;
  required InputAccounts input_accounts = 12;
}

message Output {
  repeated Meta data = 1;
}